# GameBase

./: .clang-format  CMakeLists.txt  README.md
doc/: Animator.md  EnemyAI-RL.md  Scene.md  question.md
doc/component/: component.md
gamedemo/: CMakeLists.txt  Example.cpp  GameDemoMain.cpp  game_main.cpp  resource.rc
gamedemo/script/: dqn.py  dqn_model.pt  dqn_model.pth  my_input.py  test.data
gamedemo/src/: Character.cpp  Character.h  Character.hpp  Common.hpp  LoadResource.hpp  Main.cpp
gamedemo/src/enemy/: Enemy.cpp  Enemy.h  Hornet.cpp  Hornet.h  HornetStateNodes.cpp  HornetStateNodes.h
gamedemo/src/other_object/: Background.hpp  EffectObject.hpp  UIChoose.hpp
gamedemo/src/player/: Player.cpp  Player.h  Player.hpp  PlayerStateNodes.cpp  PlayerStateNodes.h  Weapon.hpp
gamedemo/src/rl/: LoadModel.cpp  LoadModel.h  TrainingData.hpp  TrainingInfo.h
gamedemo/src/scene/: AboutScene.hpp  ButtonObject.hpp  EffectObject.hpp  GameScene.hpp  LoadScene.hpp  MenuScene.hpp  OptionsScene.hpp  TrainScene.hpp  UIChoose.hpp
src/: CMakeLists.txt  GameAf.cpp  GameAf.h
src/common/: Common.cpp  Common.h  Macros.h  MediaUtils.hpp  StateMachine.hpp  StateNode.hpp  Utils.hpp  Vector2.hpp  macros.h  media_utils.hpp
src/game_object/: GameObject.cpp  GameObject.h  game_object.cpp
src/game_object/component/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Atlas.hpp  AudioManager.cpp  AudioManager.h  Collision.cpp  Collision.h  CollisionBox.cpp  CollisionBox.h  CollisionLayer.hpp  CollisionManager.hpp  CollisionRaycaster.cpp  CollisionRaycaster.h  Component.cpp  Component.h  Image.cpp  Image.h  Rigidbody2D.cpp  Rigidbody2D.h  RigidbodyManager.hpp  TImage.hpp  Text.cpp  Text.h  Timer.hpp
src/game_object/module/: animation.hpp  animator.cpp  animator.h  atlas.hpp  collision_box.hpp  collision_component.hpp  collision_manager.hpp  component_tool.cpp  image.hpp  rigidbody2d.hpp  rigidbody_manager.hpp  timer.hpp
src/game_object/widgets/: BezierCurve.cpp  BezierCurve.h  Button.hpp  ProgressBar.cpp  ProgressBar.h
src/global/: game_af.cpp  input_manager.cpp  resource_manager.cpp
src/include/: camera.h  collision_layer.hpp  component_tool.h  game_af.h  game_object.h  input_manager.h  log.hpp  resource_manager.h  scene.h  scene_manager.h  state_machine.hpp  state_node.hpp  vector2.hpp
src/input/: InputManager.cpp  InputManager.h
src/resource/: ResourceCache.cpp  ResourceCache.h  ResourceManager.cpp  ResourceManager.h
src/scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  camera.cpp  camera.hpp  scene.cpp  scene_manager.cpp
